[project]
name = "graph-marl"
description = "Multi-Agent Reinforcement Learning in Graphs"
version = "0.1.0"
authors = [
    {name = "Jannis Weil"},
    {name = "Zhenghua Bao"},
    {name = "Amirkasra Amini"}
]
maintainers = [
    {name = "Jannis Weil"}
]
dependencies = [
    "torch>=2.0",
    "torchvision",
    "torchaudio",
    "gym",
    "numpy",
    "pettingzoo",
    "matplotlib!=3.7.2",
    "tqdm",
    "networkx>=3.1",
    "tensorboard",
    "tables",
    "gymnasium",
    "torch_geometric",
    "tabulate"
]

[project.optional-dependencies]
dev = [
    "simple-gpu-scheduler",
    "flake8==6.0.0",
    "black==22.12.0",
    "pre-commit"
]
temporal = ["torch-geometric-temporal"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"